# IdeaLync

./: .env.example  .gitignore  .prettierrc.json  LICENSE.md  README.md  bun.nix  config_example.json  default.nix  flake.nix  index.js  package.json  pyproject.toml  tsconfig.json
.github/: FUNDING.yml
src/: index.ts
src/idealync/: __init__.py  __main__.py  config.py
src/idealync/cogs/: events.py  idea_maker.py  meet_scheduler.py  member_events.py  role_selection.py
