[project]
name = "idealync"
version = "0.1.0"
description = "internal bot for solync"
requires-python = ">=3.12"
dependencies = [
 "dateparser>=1.4.1",
 "discord-py>=2.7.1",
 "python-dotenv>=1.2.2",
]

[project.scripts]
idealync = "idealync.__main__:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.16",
]

[tools.pyright]
typeCheckingMode = "strict"
include = ["src"]
